--- a/gulp/app/scss/style.scss
+++ b/gulp/app/scss/style.scss
@@ -1,5 +1,9 @@
-@import "css";
 @import "var";
+@import "css";
 @import "slider-title-small";
 @import "btn-tur";
+@import "btn-black";
+@import "btn-transparent";
 @import "switch";
+@import "start-info";
+@import "sponsor-card";
