--- a/gulp/app/scss/_css.scss
+++ b/gulp/app/scss/_css.scss
@@ -767,319 +767,6 @@ label input:focus {
     width: 50%;
   }
 }
-
-/*====================
-      START-MAP
-====================*/
-.start-map {
-  font-family: "Montserrat-Regular";
-  flex-direction: column;
-  justify-content: center;
-}
-.start-map .name-block {
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-bottom: 50px;
-}
-.start-map .content {
-  padding: 0 20px;
-  width: auto;
-}
-.start-map .start-map-title {
-  margin-bottom: 30px;
-}
-.start-map .start-mobile {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-.start-map .start-list-block {
-  margin-bottom: 15px;
-}
-.start-map .start-list-block .point {
-  margin-right: 10px;
-}
-.start-map .start-list-block ul {
-  margin: 15px 0 30px 0;
-}
-.start-map .map-img {
-  display: none;
-}
-.start-map .start-map-description {
-  display: none;
-}
-.start-map .start-list {
-  margin: 15px 0 30px 0;
-}
-.start-map .about-start-mobile, .start-map .start-map-description .about-start, .start-map .about-start {
-  width: 275px;
-}
-.start-map .about-start-mobile .title-start, .start-map .about-start .title-start {
-  padding: 7px 10px;
-  margin-bottom: 2px;
-}
-.start-map .about-start-mobile .des-start, .start-map .about-start .des-start {
-  padding: 0 5px;
-  margin: 15px 0 30px 0;
-  display: none;
-}
-.start-map .about-start-mobile .des-start > div, .start-map .about-start .des-start > div {
-  display: flex;
-  justify-content: flex-start;
-  margin-bottom: 10px;
-}
-.start-map .about-start-mobile .des-start > div div:first-child, .start-map .about-start .des-start > div div:first-child {
-  flex-basis: 40%;
-}
-.start-map .about-start-mobile .des-start > div div:last-child, .start-map .about-start .des-start > div div:last-child {
-  flex-basis: 60%;
-}
-.start-map .start-training {
-  margin-bottom: 30px;
-}
-.start-map .warning {
-  margin-bottom: 30px;
-}
-.start-map .warning .warning-img {
-  padding-top: 5px;
-  margin-right: 15px;
-}
-.start-map .warning p {
-  margin: 0;
-}
-@media screen and (min-width: 992px) {
-  .start-map > * {
-    z-index: 10;
-  }
-  .start-map .start-map-description {
-    display: block;
-  }
-  .start-map .start-map-main {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 30px;
-  }
-  .start-map .map-img {
-    position: absolute;
-    top: -50px;
-    left: 5%;
-    width: 65%;
-    max-width: 663px;
-    z-index: 1;
-    display: block;
-  }
-  .start-map .map-img img {
-    max-width: 100%;
-  }
-  .start-map .map-img .point {
-    position: absolute;
-    background-color: #2e2e2e;
-    padding: 4px;
-  }
-  .start-map .map-img .point:hover {
-    background-color: black;
-  }
-  .start-map .map-img #p4, .start-map .map-img #p6, .start-map .map-img #p9, .start-map .map-img #p8 {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-    display: none;
-  }
-  .start-map .map-img #p4 span, .start-map .map-img #p6 span, .start-map .map-img #p9 span, .start-map .map-img #p8 span {
-    color: inherit;
-  }
-  .start-map .map-img #p4:after, .start-map .map-img #p6:after, .start-map .map-img #p9:after, .start-map .map-img #p8:after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 15px;
-    left: 0;
-    height: 30px;
-    width: 1px;
-    background-color: black;
-    transform: rotate(15grad);
-  }
-  .start-map .map-img #p1 {
-    top: 52%;
-    left: 55%;
-  }
-  .start-map .map-img #p2 {
-    top: 66%;
-    left: 79%;
-  }
-  .start-map .map-img #p3 {
-    top: 62.5%;
-    left: 76%;
-  }
-  .start-map .map-img #p4 {
-    top: 52%;
-    left: 80%;
-  }
-  .start-map .map-img #p4:after {
-    top: 20px;
-    left: 12px;
-    height: 46px;
-    transform: rotate(-8grad);
-  }
-  .start-map .map-img #p5 {
-    top: 75%;
-    left: 38%;
-  }
-  .start-map .map-img #p6 {
-    top: 52%;
-    left: 75%;
-  }
-  .start-map .map-img #p6:after {
-    top: 16px;
-    left: 27px;
-    height: 61px;
-    transform: rotate(-35grad);
-  }
-  .start-map .map-img #p7 {
-    top: 89%;
-    left: 59%;
-  }
-  .start-map .map-img #p8 {
-    top: 52%;
-    left: 90%;
-  }
-  .start-map .map-img #p8:after {
-    top: 8px;
-    left: -20px;
-    height: 79px;
-    transform: rotate(51grad);
-  }
-  .start-map .map-img #p9 {
-    top: 52%;
-    left: 85%;
-  }
-  .start-map .map-img #p9:after {
-    top: 18px;
-    left: -2px;
-    height: 48px;
-    width: 1px;
-    transform: rotate(29grad);
-  }
-  .start-map .map-img #kharkov {
-    top: 62.5%;
-    left: 81%;
-  }
-  .start-map .start-list {
-    display: none;
-  }
-  .start-map .start-map-bottom {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: relative;
-    z-index: 2;
-  }
-  .start-map .start-map-bottom .start-training {
-    flex-basis: 60%;
-  }
-  .start-map .start-map-bottom .warning {
-    flex-basis: 40%;
-  }
-  .start-map .start-training {
-    display: flex;
-    align-items: center;
-  }
-  .start-map .start-training p {
-    margin-right: 30px;
-  }
-}
-.start-map .start-map-description {
-  margin-bottom: 110px;
-}
-.start-map .start-map-description .about-start-title {
-  margin-bottom: 50px;
-}
-.start-map .start-map-description .about-start {
-  margin-bottom: 100px;
-}
-.start-map .start-map-description .about-start .des-start {
-  display: block;
-}
-@media screen and (min-width: 1200px) {
-  .start-map {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .start-map .name-block {
-    margin-left: 0;
-    margin-top: 50px;
-  }
-  .start-map .start-map-description {
-    width: 40%;
-  }
-  .start-map .start-map-description .about-start {
-    width: 100%;
-  }
-  .start-map .start-map-description .des-start > div div:first-child {
-    flex-basis: 30%;
-  }
-  .start-map .start-map-description .des-start > div div:last-child {
-    flex-basis: 70%;
-  }
-  .start-map .map-img {
-    top: -90px;
-  }
-  .start-map .start-map-bottom {
-    align-items: center;
-  }
-}
-@media screen and (min-width: 1360px) {
-  .start-map .map-img {
-    left: 11%;
-    width: 45%;
-  }
-  .start-map .name-block {
-    margin-left: 0;
-  }
-}
-@media screen and (min-width: 1360px) and (max-width: 1600px) {
-  .start-map .name-block {
-    margin-top: 35px;
-  }
-  .start-map .map-img {
-    width: 40%;
-    top: -100px;
-    left: 15%;
-  }
-  .start-map .start-map-description {
-    margin-bottom: 60px;
-  }
-  .start-map .start-map-description .about-start {
-    margin-bottom: 50px;
-  }
-  .start-map .start-training > div {
-    margin-right: 50px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .start-map {
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    align-items: flex-start;
-  }
-  .start-map .name-block span {
-    margin: 0;
-  }
-  .start-map .content {
-    padding: 0;
-  }
-  .start-map .map-img {
-    left: 8%;
-    width: 100%;
-    top: -50px;
-  }
-  .start-map .start-training p {
-    margin-right: 80px;
-  }
-}
-
 /*====================
         COACH
 ====================*/
@@ -1391,87 +1078,6 @@ label input:focus {
   }
   .shop .name-block {
     margin-bottom: 150px;
-  }
-}
-
-/*====================
-      SPONSORS
-====================*/
-.sponsors {
-  padding: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.sponsors > div {
-  max-width: 1366px;
-}
-.sponsors .name-block {
-  margin-bottom: 100px;
-}
-.sponsors .content {
-  display: flex;
-  display: -ms-Flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  flex-wrap: wrap;
-  justify-items: center;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 50px;
-}
-.sponsors .sponsor {
-  display: flex;
-  display: -ms-Flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  -webkit-justify-content: end;
-  -moz-justify-content: end;
-  -ms-justify-content: end;
-  justify-content: end;
-  flex-direction: column;
-  align-items: center;
-  width: 45%;
-  padding: 5px;
-}
-@media screen and (max-width: 767px) {
-  .sponsors .sponsor {
-    margin-bottom: 30px;
-  }
-}
-.sponsors a {
-  color: white;
-  text-decoration: none;
-  text-align: center;
-}
-.sponsors img {
-  max-width: 100%;
-}
-.sponsors .become-sponsor {
-  width: 100%;
-}
-@media screen and (min-width: 1200px) {
-  .sponsors {
-    height: 100vh;
-    padding: 0;
-    align-content: space-around;
-  }
-  .sponsors .content {
-    -webkit-justify-content: space-around;
-    -moz-justify-content: space-around;
-    -ms-justify-content: space-around;
-    justify-content: space-around;
-    margin-bottom: 0;
-    flex-direction: row;
-    align-items: flex-end;
-  }
-  .sponsors .name-block {
-    margin-bottom: 0;
-  }
-  .sponsors .sponsor {
-    width: auto;
   }
 }
 
@@ -1948,79 +1554,123 @@ label input:focus {
       START-MAP
 ====================*/
 .start-map {
-  background-image: url("../img/start-map.jpg");
-  background-position: center center;
+  background-image: url("../img/start-map-1.jpg");
+  background-position: center;
   background-repeat: no-repeat;
-  color: black;
-  font-size: 10px;
+  background-size: cover;
 }
-.start-map .start-list-block > span {
-  font-family: Montserrat-Medium;
-  font-size: 1.4em;
-  text-transform: lowercase;
-}
-.start-map .start-map-title {
-  font-family: Montserrat-Bold;
-  font-size: 3em;
-  line-height: 1.33;
-}
-.start-map .start-list {
-  font-family: Montserrat-Medium;
-  font-size: 14px;
-}
-.start-map .about-start-mobile .title-start, .start-map .about-start .title-start {
-  color: white;
-  background-color: black;
-  cursor: default;
-}
-.start-map .about-start-mobile .title-start:hover, .start-map .about-start .title-start:hover {
-  color: #7dd7d7;
-}
-.start-map .about-start-mobile .des-start > div > div:last-child, .start-map .about-start .des-start > div > div:last-child {
-  font-family: Montserrat-Bold;
-}
-.start-map .registration {
-  font-family: Montserrat-Bold;
-  font-size: 1.8em;
-}
-.start-map .registration a {
-  font-family: Montserrat-Regular;
-  font-size: 12px;
-}
-.start-map .start-map-bottom p {
-  font-family: Montserrat-Medium;
-  font-size: 1.8em;
-}
-.start-map .start-map-bottom button {
-  border-color: black;
-}
-.start-map .start-map-bottom .warning {
+
+.start-map .content-wrapper {
+  flex: 1 1 auto;
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 50px 30px 35px;
   display: flex;
+  align-items: center;
 }
-.start-map .start-map-bottom .warning p {
-  font-family: Montserrat-Bold;
+
+.start-map .content {
+  width: 100%;
+  max-width: 820px;
+  margin: 0 auto;
 }
-.start-map .about-start {
-  font-size: 1.6em;
+
+.start-map .name-block {
+  margin: 0 0 50px;
 }
-.start-map .about-start-title {
-  font-family: Montserrat-ExtraBold;
-  font-size: 3em;
-}
-@media screen and (min-width: 1360px) and (max-width: 1600px) {
-  .start-map .start-map-title {
-    font-size: 2.5em;
-  }
-  .start-map .about-start-title {
-    font-size: 2.5em;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .start-map .start-map-description .des-start > div {
-    line-height: 2.6;
+
+.start-map-title {
+  width: 320px;
+
+  &__text {
+    font-size: 36px;
+    font-family: Montserrat-Bold;
+    color: #111;
+    line-height: 40px;
   }
 }
 
+.map-wrapper {
+  text-align: center;
+  margin: -84px 0 0;
+}
+
+.map-img {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  padding: 61.586% 0 0 67.44%;
+  
+  & img {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.map-point {
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+
+  &:hover {
+    @media (hover: hover) {
+      cursor: pointer;
+    }
+  }
+
+  &__ico {
+    position: absolute;
+    display: block;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 4px solid #333;
+    background: $tur;
+    transition: .15s;
+    z-index: 1;
+  }
+
+  &__text {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    top: -4px;
+    bottom: -4px;
+    left: -4px;
+    height: 32px;
+    min-width: 130px;
+    padding: 0 12px 0 32px;
+    font-size: 12px;
+    font-family: Montserrat-Bold;
+    color: #fff;
+    background: #333;
+    border-radius: 16px;
+    transition: .15s;
+    margin: auto;
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  &.active {
+    & .map-point__ico {
+      border: 4px solid #fff;
+    }
+
+    & .map-point__text {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+}
 /*====================
         COACH
 ====================*/
@@ -2096,37 +1746,40 @@ label input:focus {
 ====================*/
 .sponsors {
   background-image: url("../img/footer.jpg");
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: white;
+  flex-direction: column;
+  padding: 50px 30px;
 }
+
+.sponsors .name-block {
+  width: 100%;
+  max-width: 1170px;
+  padding: 0 0 0 10px;
+  margin: 0 auto 80px;
+  color: #fff;
+}
+
 .sponsors .content {
-  font-size: 10px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto 22px;
 }
-.sponsors .text-sponsor {
-  font-size: 1.4em;
-  font-family: Montserrat-Regular;
-  color: #bebebe;
-}
-.sponsors .become-sponsor {
-  font-family: Montserrat-SemiBold;
-  font-size: 1.4em;
+
+.become-sponsor {
   text-align: center;
-  color: #bebebe;
-}
-.sponsors .become-sponsor button {
-  font-size: inherit;
-}
-@media screen and (min-width: 768px) {
-  .sponsors .content {
-    font-size: 14px;
+
+  &__title {
+    margin: 0 0 20px;
   }
-  .sponsors .become-sponsor {
-    font-size: 1.8em;
-  }
-  .sponsors .become-sponsor button {
-    font-size: inherit;
+
+  &__text {
+    font-size: 18px;
+    font-family: Montserrat-Medium, sans-serif;
+    color: #fff;
   }
 }
 
