--- a/new/js/onepage-scroll/onepage-scroll.css
+++ b/new/js/onepage-scroll/onepage-scroll.css
@@ -41,32 +41,37 @@ body, .onepage-wrapper, html {
 .onepage-pagination li {
   padding: 0;
   text-align: center;
+  margin: 3px 0;
 }
 .onepage-pagination li a{
-  padding: 10px;
-  width: 4px;
-  height: 4px;
+  position: relative;
   display: block;
-  
+  padding: 10px;
+
 }
 .onepage-pagination li a:before{
   content: '';
   position: absolute;
   width: 4px;
   height: 4px;
-  background: rgba(0,0,0,0.85);
+  display: block;
+  background: #fff;
+  border: 1px solid #fff;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
+  top: 8px;
+  left: 8px;
+  transition: .2s;
 }
 
 .onepage-pagination li a.active:before{
   width: 10px;
   height: 10px;
   background: none;
-  border: 1px solid black;
-  margin-top: -4px;
-  left: 8px;
+  border: 1px solid #fff;
+  top: 5px;
+  left: 5px;
 }
 
 .disabled-onepage-scroll, .disabled-onepage-scroll .wrapper {
