--- a/gulp/app/scss/_css.scss
+++ b/gulp/app/scss/_css.scss
@@ -303,18 +303,52 @@ label input:focus {
 .start {
   flex-direction: column;
   position: relative;
-  padding-bottom: 30px;
-  padding-top: 130px;
+  color: #fff;
+  padding: 0 40px;
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex: 1 0 auto;
+    justify-content: space-between;
+  }
 }
+
+.start .mouse {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  padding: 50px 0 60px;
+
+  @media (max-width: 1366px) {
+    padding: 20px 0;
+  }
+
+  & svg {
+    display: block;
+  }
+}
+
 /* line 25, ../sass/_layouts.scss */
 .start header {
-  position: fixed;
+  //position: fixed;
   width: 100%;
   max-width: 1170px;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  //background-color: rgba(0, 0, 0, 0.5);
   z-index: 10;
+  justify-content: space-between;
+  margin: 0 auto;
+  position: static;
+  align-items: center;
+  background-color: transparent;
+  padding: 56px 0 50px;
+
+  @media (max-width: 1366px) {
+    padding: 20px 0;
+  }
 }
 /* line 34, ../sass/_layouts.scss */
 .start header > div {
@@ -325,25 +359,9 @@ label input:focus {
   width: 120px;
 }
 @media only screen and (min-width: 992px) {
-  /* line 25, ../sass/_layouts.scss */
-  .start header {
-    margin: 0 auto;
-    position: static;
-    align-items: center;
-    background-color: transparent;
-    padding: 56px 0 120px;
-  }
   /* line 49, ../sass/_layouts.scss */
   .start header > div {
     margin: 0;
-  }
-  /* line 52, ../sass/_layouts.scss */
-  .start header > div:first-child {
-    margin-right: auto;
-  }
-  /* line 55, ../sass/_layouts.scss */
-  .start header > div:last-child {
-    margin-left: auto;
   }
 }
 /* line 61, ../sass/_layouts.scss */
@@ -474,25 +492,7 @@ label input:focus {
 .start .slider-content .slider-text {
   margin-bottom: 40px;
 }
-@media only screen and (min-width: 768px) {
-  /* line 18, ../sass/_layouts.scss */
-  .start {
-    padding-top: 190px;
-  }
-}
 @media only screen and (min-width: 992px) {
-  /* line 18, ../sass/_layouts.scss */
-  .start {
-    padding-top: 0;
-  }
-  /* line 169, ../sass/_layouts.scss */
-  .start .phone {
-    margin-right: -121px;
-  }
-  /* line 174, ../sass/_layouts.scss */
-  .start .content {
-    margin: 0 auto;
-  }
   /* line 176, ../sass/_layouts.scss */
   .start .content .menu {
     padding: 90px 0 0;
@@ -508,10 +508,6 @@ label input:focus {
   }
 }
 @media only screen and (min-width: 1200px) {
-  /* line 18, ../sass/_layouts.scss */
-  .start {
-    padding: 0;
-  }
   /* line 205, ../sass/_layouts.scss */
   .start .content .slider-menu {
     flex-direction: row;
@@ -545,6 +541,214 @@ label input:focus {
   z-index: -10;
 }
 
+.header-phone {
+  font-family: Oswald-Regular;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin: 0 0 0 110px;
+
+  &:hover {
+    text-decoration: none;
+    outline: none;
+  }
+
+  &__ico {
+    flex-shrink: 0;
+    display: block;
+    margin: 0 8px 0 0;
+
+    & svg {
+      display: block;
+    }
+  }
+
+  &__text {
+    flex-shrink: 0;
+    display: block;
+  }
+}
+.start .logo {
+  position: fixed;
+  top: 65px;
+  left: 20px;
+  max-width: 70px;
+}
+.start .logo img {
+  max-width: 100%;
+}
+@media only screen and (min-width: 992px) {
+  .start .logo {
+    position: static;
+    max-width: 100%;
+  }
+}
+.start .mobile-menu svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  fill: white;
+}
+.start .mobile-menu svg:last-child {
+  fill: black;
+}
+.start nav {
+  font-family: Oswald-Regular, sans-serif;
+  color: black;
+  font-size: 16px;
+  background-color: rgba(135, 215, 215, 0.9);
+}
+.start nav li {
+  list-style-type: none;
+}
+.start nav svg {
+  max-width: 50px;
+  fill: white;
+}
+.start nav .nav-slider {
+  margin-top: 146px;
+  max-width: 130px;
+}
+.start nav .nav-slider span:first-child {
+  margin-right: 20px;
+}
+@media only screen and (min-width: 992px) {
+  .start nav {
+    background-color: transparent;
+    color: white;
+    font-size: 20px;
+  }
+}
+.start .slider-content {
+  font-size: 10px;
+}
+.start .slider-content .slider-menu p {
+  font-family: Montserrat-Light;
+  font-size: 1.4em;
+}
+.start .slider-content .slider-menu p span {
+  font-size: 2em;
+}
+.start .slider-content .slider-menu button {
+  color: white;
+  padding: 10px 30px;
+}
+.start .slider-content .slider-title {
+  font-size: 70px;
+  letter-spacing: 1px;
+  line-height: 72px;
+  font-family: Oswald-Bold;
+  margin-bottom: 30px;
+}
+@media only screen and (max-width: 1366px) {
+  .start .slider-content .slider-title {
+    font-size: 54px;
+    letter-spacing: 1px;
+    line-height: 64px;
+    font-family: Oswald-Bold;
+    margin-bottom: 20px;
+  }
+  .slider-title-small {
+    margin: 0 0 20px;
+  }
+  .start .slider-content .slider-text {
+    margin-bottom: 20px;
+    margin-top: 0;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .start .slider-content .slider-title {
+    font-size: 64px;
+    line-height: 66px;
+  }
+}
+.start .slider-content .slider-text {
+  font-family: Montserrat-Light;
+  font-size: 14px;
+  line-height: 22px;
+}
+.start .slider-content .slider-text span {
+  font-size: 2em;
+}
+.start .slider-content .slider-menu p {
+  font-size: 1.2em;
+}
+@media only screen and (min-width: 480px) {
+  .start .slider-content .slider-menu p {
+    font-size: 1.4em;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .start .slider-content {
+    font-size: 1.1em;
+  }
+}
+
+.onepage-pagination li a::before {
+  background-color: white;
+}
+
+.onepage-pagination li a.active::before {
+  border-color: white;
+}
+
+.banners {
+  background-image: url("../img/slide1.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  color: #fff;
+}
+.banners .slider-menu p {
+  font-family: Montserrat-Light;
+  font-size: 14px;
+}
+.banners .slider-menu p span {
+  font-size: 20px;
+}
+.banners .slider-menu button {
+  color: white;
+  padding: 10px 30px;
+}
+.banners .slider-title {
+  font-family: Oswald-SemiBold;
+  font-size: 50px;
+  letter-spacing: 1px;
+  line-height: 52px;
+  margin-bottom: 30px;
+}
+@media only screen and (min-width: 1200px) {
+  .banners .slider-title {
+    font-size: 90px;
+    letter-spacing: 1px;
+    line-height: 92px;
+  }
+}
+.banners .slider-text {
+  font-family: Montserrat-Light;
+  font-size: 14px;
+  max-width: 440px;
+}
+.banners .slider-text span {
+  font-size: 20px;
+}
+@media only screen and (min-width: 768px) {
+  .banners .slider-text {
+    font-size: 18px;
+    max-width: 100%;
+  }
+}
+.banners .slider-menu p {
+  font-size: 12px;
+}
+@media only screen and (min-width: 480px) {
+  .banners .slider-menu p {
+    font-size: 14px;
+  }
+}
+
 /*====================
       TEAM
 ====================*/
@@ -557,6 +761,13 @@ label input:focus {
   background-position: center;
   -webkit-background-size: cover;
   background-size: cover;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    justify-content: center;
+  }
 }
 
 .team > div {
@@ -567,13 +778,15 @@ label input:focus {
 .team .content, .team .name-block {
   z-index: 2;
 }
+
+.team .name-block {
+  margin-bottom: 50px;
+}
+
 .team .blue-block {
   width: 50%;
   background-color: #7dd7d7;
   margin: 0;
-}
-.team .name-block {
-  margin-top: 100px;
 }
 .team .name-block span {
   margin-left: 55px;
@@ -602,8 +815,6 @@ label input:focus {
 .team .team-info .title-team {
   padding-bottom: 0;
 }
-.team .team-info .title-des {
-}
 .team .team-info .statistic-data {
   flex-wrap: wrap;
   justify-content: space-around;
@@ -614,6 +825,9 @@ label input:focus {
 }
 .team .team-info .team-statistic {
   margin: auto;
+}
+.team .team-info .title-des {
+  margin-bottom: 50px;
 }
 @media screen and (min-width: 768px) {
   .team .team-statistic {
@@ -626,17 +840,11 @@ label input:focus {
   }
 }
 @media screen and (min-width: 992px) {
-  .team .name-block {
-    margin-bottom: 50px;
-  }
   .team .team-info > *:not(.m-team-photo) {
     padding: 0 20px 0 20px;
   }
   .team .team-info .title-team {
     margin-bottom: 30px;
-  }
-  .team .team-info .title-des {
-    margin-bottom: 50px;
   }
   .team:before {
     background: -moz-linear-gradient(left, #7dd7d7 50%, transparent 50%);
@@ -645,9 +853,6 @@ label input:focus {
   }
 }
 @media screen and (min-width: 1200px) {
-  .team {
-    height: 100%;
-  }
   .team .m-team-photo {
     display: none;
   }
@@ -678,12 +883,24 @@ label input:focus {
   background-image: url("../img/philosophy-1.jpg");
   background-position: center;
   background-size: cover;
+  padding: 20px 0;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    justify-content: center;
+  }
 }
 .philosophy .name-block {
   max-width: 1170px;
   width: 100%;
   margin: 0 auto 100px;
-  padding: 50px 10px 0;
+  padding: 0 0 0 10px;
+
+  @media (max-width: 1366px) {
+    margin: 0 auto 40px;
+  }
 }
 .philosophy .name-block span {
   display: block;
@@ -728,11 +945,23 @@ label input:focus {
 .cost {
   flex-direction: column;
   padding: 50px 0;
+
+  @media (max-width: 1366px) {
+    padding: 20px 0;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1 0 auto;
+  }
 }
 .cost .name-block {
+  flex-shrink: 0;
   max-width: 1170px;
   width: 100%;
-  margin: 0 auto 150px;
+  margin: 0 auto 50px;
   position: relative;
   padding: 0 0 0 10px;
 }
@@ -779,12 +1008,19 @@ label input:focus {
 .directions-coach .trainer-photo {
   text-align: center;
   width: 50%;
+  margin-left: 0;
 }
 .directions-coach .trainer-photo img {
   height: 210px;
 }
 .directions-coach .coach2 {
   margin-top: 268px;
+}
+.directions-coach .coach1-wrapper {
+  flex: 1 0 50%
+}
+.directions-coach .coach2 {
+  flex: 1 0 50%
 }
 .directions-coach .coach1, .directions-coach .coach2 {
   display: flex;
@@ -796,29 +1032,16 @@ label input:focus {
   margin-top: 197px;
   padding: 0 0 0 90px;
 }
+.directions-coach .trainer-photo img {
+  max-width: 100%;
+  height: auto;
+}
 @media screen and (max-width: 992px) {
   .directions-coach .flex-box {
     flex-direction: column;
   }
   .directions-coach .trainer-description {
     margin-top: 20px;
-  }
-}
-@media screen and (min-width: 460px) {
-  .directions-coach .trainer-photo {
-    margin-left: 0;
-    width: 50%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .directions-coach .trainer-photo {
-    text-align: center;
-    margin-left: 0;
-    width: 50%;
-  }
-  .directions-coach .trainer-photo img {
-    max-width: 100%;
-    height: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1141,193 +1364,9 @@ label input:focus {
   margin-top: 30px;
 }
 
-.start {
-  color: white;
-}
-.start .phone {
-  font-family: Oswald-Light;
-  font-size: 18px;
-}
-.start .phone a {
-  color: inherit;
-  text-decoration: none;
-}
-.start .logo {
-  position: fixed;
-  top: 65px;
-  left: 20px;
-  max-width: 70px;
-}
-.start .logo img {
-  max-width: 100%;
-}
-@media only screen and (min-width: 992px) {
-  .start .logo {
-    position: static;
-    max-width: 100%;
-  }
-}
-.start .mobile-menu svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 25px;
-  fill: white;
-}
-.start .mobile-menu svg:last-child {
-  fill: black;
-}
-.start nav {
-  font-family: Oswald-Regular, sans-serif;
-  color: black;
-  font-size: 16px;
-  background-color: rgba(135, 215, 215, 0.9);
-}
-.start nav li {
-  list-style-type: none;
-}
-.start nav svg {
-  max-width: 50px;
-  fill: white;
-}
-.start nav .nav-slider {
-  margin-top: 146px;
-  max-width: 130px;
-}
-.start nav .nav-slider span:first-child {
-  margin-right: 20px;
-}
-@media only screen and (min-width: 992px) {
-  .start nav {
-    background-color: transparent;
-    color: white;
-    font-size: 20px;
-  }
-}
-.start .slider-content {
-  font-size: 10px;
-}
-.start .slider-content .slider-menu p {
-  font-family: Montserrat-Light;
-  font-size: 1.4em;
-}
-.start .slider-content .slider-menu p span {
-  font-size: 2em;
-}
-.start .slider-content .slider-menu button {
-  color: white;
-  padding: 10px 30px;
-}
-.start .slider-content .slider-title {
-  font-family: Oswald-Bold;
-  font-size: 5em;
-  letter-spacing: 1px;
-  line-height: 52px;
-  margin-bottom: 30px;
-}
-@media only screen and (min-width: 768px) {
-  .start .slider-content .slider-title {
-    font-size: 70px;
-    letter-spacing: 1px;
-    line-height: 72px;
-  }
-}
-@media only screen and (min-width: 1600px) {
-  .start .slider-content .slider-title {
-    font-size: 64px;
-    line-height: 66px;
-  }
-}
-.start .slider-content .slider-text {
-  font-family: Montserrat-Light;
-  font-size: 14px;
-  line-height: 22px;
-}
-.start .slider-content .slider-text span {
-  font-size: 2em;
-}
-.start .slider-content .slider-menu p {
-  font-size: 1.2em;
-}
-@media only screen and (min-width: 480px) {
-  .start .slider-content .slider-menu p {
-    font-size: 1.4em;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .start .slider-content {
-    font-size: 1.1em;
-  }
-}
-
-.onepage-pagination li a::before {
-  background-color: white;
-}
-
-.onepage-pagination li a.active::before {
-  border-color: white;
-}
-
-.banners {
-  background-image: url("../img/slide1.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  color: #fff;
-}
-.banners .slider-menu p {
-  font-family: Montserrat-Light;
-  font-size: 14px;
-}
-.banners .slider-menu p span {
-  font-size: 20px;
-}
-.banners .slider-menu button {
-  color: white;
-  padding: 10px 30px;
-}
-.banners .slider-title {
-  font-family: Oswald-SemiBold;
-  font-size: 50px;
-  letter-spacing: 1px;
-  line-height: 52px;
-  margin-bottom: 30px;
-}
-@media only screen and (min-width: 1200px) {
-  .banners .slider-title {
-    font-size: 90px;
-    letter-spacing: 1px;
-    line-height: 92px;
-  }
-}
-.banners .slider-text {
-  font-family: Montserrat-Light;
-  font-size: 14px;
-  max-width: 440px;
-}
-.banners .slider-text span {
-  font-size: 20px;
-}
-@media only screen and (min-width: 768px) {
-  .banners .slider-text {
-    font-size: 18px;
-    max-width: 100%;
-  }
-}
-.banners .slider-menu p {
-  font-size: 12px;
-}
-@media only screen and (min-width: 480px) {
-  .banners .slider-menu p {
-    font-size: 14px;
-  }
-}
-
 /*====================
       TEAM
 ====================*/
-.team {
-  font-size: 8px;
-}
 .team .title-team {
   font-family: Montserrat-Bold;
   font-size: 2.4em;
@@ -1344,11 +1383,6 @@ label input:focus {
 .team .team-statistic button {
   border-color: black;
   font-size: 1.6em;
-}
-@media screen and (min-width: 768px) {
-  .team {
-    font-size: 9px;
-  }
 }
 @media screen and (min-width: 992px) {
   .team .photo {
@@ -1382,18 +1416,34 @@ label input:focus {
 ====================*/
 .directions {
   flex-direction: column;
-  background-image: url("../img/dir-triathlon.jpg");
+  background-image: url("../img/dir-triathlon.jpg"), url("../img/dir-run.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   color: #fff;
   padding: 50px 0;
+
+  @media (max-width: 1366px) {
+    padding: 20px 0;
+  }
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    justify-content: center;
+  }
 }
 
 .directions .name-block {
+  flex-shrink: 0;
   max-width: 1170px;
   width: 100%;
   margin: 0 auto 80px;
   padding: 0 0 0 10px;
+
+  @media (max-width: 1366px) {
+    margin: 0 auto 20px;
+  }
 }
 
 .name-block__title {
@@ -1560,6 +1610,10 @@ label input:focus {
   background-size: cover;
 }
 
+.start-map-main {
+  width: 100%;
+}
+
 .start-map .content-wrapper {
   flex: 1 1 auto;
   width: 100%;
@@ -1567,16 +1621,21 @@ label input:focus {
   margin: 0 auto;
   padding: 50px 30px 35px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+
 }
 
 .start-map .content {
+  flex: 1 0 auto;
   width: 100%;
   max-width: 820px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 .start-map .name-block {
+  flex-shrink: 0;
   margin: 0 0 50px;
 }
 
@@ -1593,7 +1652,7 @@ label input:focus {
 
 .map-wrapper {
   text-align: center;
-  margin: -84px 0 0;
+  margin: -84px auto 30px;
 }
 
 .map-img {
@@ -1671,6 +1730,53 @@ label input:focus {
     }
   }
 }
+
+.additional-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  &__right {
+    flex-shrink: 0;
+  }
+
+  &__left {
+    flex-shrink: 0;
+    padding: 10px 0;
+  }
+
+  &__text {
+    display: block;
+    width: 236px;
+    font-family: Montserrat-Bold;
+    font-size: 14px;
+    line-height: 22px;
+    padding: 0 0 0 15px;
+    margin: 0 0 10px;
+  }
+}
+
+.additional-info-warning{
+  display: flex;
+  align-items: center;
+
+  &__text {
+    display: block;
+    width: 345px;
+    font-size: 14px;
+    line-height: 20px;
+    font-family: Montserrat-Medium;
+  }
+
+  &__ico {
+    flex-shrink: 0;
+    margin: 0 18px 0 0;
+
+    & svg {
+      display: block;
+    }
+  }
+}
 /*====================
         COACH
 ====================*/
@@ -1681,7 +1787,18 @@ label input:focus {
   background-size: cover;
   color: #fff;
   flex-direction: column;
-  padding: 50px 0;
+  padding: 40px 0;
+
+  @media (max-width: 1366px) {
+    padding: 20px 0;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1 0 auto;
+  }
 }
 .directions-coach .trainer-name {
   font-family: Montserrat-Bold;
@@ -1751,6 +1868,13 @@ label input:focus {
   background-size: cover;
   flex-direction: column;
   padding: 50px 30px;
+
+  &__inner {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1 0 auto;
+  }
 }
 
 .sponsors .name-block {
@@ -1795,4 +1919,67 @@ label input:focus {
 }
 .pp-form .form button {
   color: white;
+}
+
+/*====================
+      Scrollbar
+====================*/
+
+.ps {
+  overflow: hidden !important;
+  overflow-anchor: none;
+  -ms-overflow-style: none;
+  touch-action: auto;
+  -ms-touch-action: auto;
+}
+
+.ps__rail-y {
+  display: block;
+  opacity: 1;
+  transition: background .15s linear, width .15s ease-in-out;
+  -webkit-transition: background .15s linear, width .15s ease-in-out;
+  width: 6px;
+  border-radius: 6px;
+  /* there must be 'right' or 'left' for ps__rail-y */
+  right: 0;
+  /* please don't change 'position' */
+  position: absolute;
+  background: rgba(255,255,255,.2);
+}
+
+.ps__thumb-y {
+  background-color: #B8E1E5;
+  border-radius: 6px;
+  transition: background-color .15s linear, width .15s ease-in-out;
+  -webkit-transition: background-color .15s linear, width .15s ease-in-out;
+  width: 6px;
+  /* there must be 'right' for ps__thumb-y */
+  right: 0;
+  /* please don't change 'position' */
+  position: absolute;
+}
+
+.ps__rail-y:hover > .ps__thumb-y,
+.ps__rail-y:focus > .ps__thumb-y,
+.ps__rail-y.ps--clicking .ps__thumb-y {
+  width: 11px;
+}
+
+.ps__rail-y:hover,
+.ps__rail-y:focus,
+.ps__rail-y.ps--clicking {
+  width: 11px;
+}
+
+/* MS supports */
+@supports (-ms-overflow-style: none) {
+  .ps {
+    overflow: auto !important;
+  }
+}
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .ps {
+    overflow: auto !important;
+  }
 }
