--- a/gulp/app/scss/_media.scss
+++ b/gulp/app/scss/_media.scss
@@ -180,9 +180,6 @@
   .start .mouse {
     display: none;
   }
-  .start .content .menu {
-    padding: 30px 0 0;
-  }
   .team {
     padding: 60px;
   }
@@ -236,7 +233,7 @@
   .header-phone {
     display: none;
   }
-  .social {
+  .start .social {
     display: none;
   }
   .start .menu nav {
@@ -245,13 +242,13 @@
     top: 0;
     width: 282px;
     height: 100%;
-    padding: 0 20px 30px 20px;
     z-index: 10;
-    transition: ease-in 0.3s;
+    transition: .2s;
     background: #333333;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 0;
     transform: translateX(-100%);
     opacity: 0;
 
@@ -265,10 +262,11 @@
 
     & .header-phone {
       display: flex;
-      margin: 0;
+      margin: 0 0 40px 26px;
     }
 
     & .social {
+      margin: 0 0 40px 10px;
       display: block;
 
       & svg {
@@ -278,6 +276,7 @@
   }
   .start .menu nav ul {
     width: 100%;
+    padding: 0 20px;
   }
   .start .menu nav ul li:not(:last-child) {
     margin-bottom: 15px;
@@ -349,8 +348,172 @@
 
 }
 
-@media (max-width: 768px) {
-  
+@media (max-width: 992px) {
+  .banners {
+    background-position: left -322px center;
+  }
+  .team .name-block span {
+    margin: 0;
+  }
+  .team .name-block {
+    text-align: center;
+  }
+  .team .go-in-team {
+    display: block;
+  }
+  .philosophy-big-text {
+    max-width: 460px;
+  }
+  .philosophy-small-text {
+    max-width: 460px;
+  }
+  .philosophy .name-block {
+    padding: 0;
+    text-align: center;
+  }
+  .directions .name-block {
+    padding: 0;
+    text-align: center;
+  }
+  .directions .name-block .name-block__title {
+    margin: 0 0 30px;
+  }
+  .switch-wrapper {
+    margin: 0 0 50px;
+  }
+  .cost .switch-wrapper {
+    display: none;
+  }
+  .cost .cost-box {
+    display: block;
+  }
+  .cost .flex-box > div {
+    width: 100%;
+  }
+  .cost .name-block {
+    padding: 0;
+    text-align: center;
+    margin: 0 0 50px;
+  }
+  .directions-coach .name-block {
+    margin-bottom: 40px;
+    padding: 0;
+    text-align: center;
+  }
+  .directions-coach__inner {
+    display: block;
+  }
+  .directions-coach .content .flex-box {
+    display: block;
+  }
+  .coach1__row {
+    display: none;
+  }
+  .directions-coach .coach1 .trainer-photo {
+    margin: 0;
+    width: 44%;
+  }
+  .directions-coach .trainer-photo {
+    width: 44%;
+  }
+  .cost .discount {
+    text-align: center;
+  }
+  .cost .cost-price > p {
+    text-align: center;
+  }
+  .cost .cost-price {
+    padding: 0;
+  }
+  .directions-coach {
+    padding: 60px;
+  }
+  .start-map.flex-box {
+    display: block;
+  }
+  .start-info {
+    width: 100%;
+  }
+  .start-map .content-wrapper {
+    padding: 60px 20px 40px;
+  }
+  .start-map .name-block {
+    text-align: center;
+    padding: 0;
+  }
+  .map-wrapper {
+    margin: 0 auto 30px;
+  }
+  .start-map-title__text {
+    text-align: center;
+    font-size: 24px;
+    line-height: 34px;
+  }
+  .start-map-title {
+    width: 220px;
+    margin: 0 auto 40px;
+  }
+  .start-map .name-block {
+    margin: 0 0 30px;
+  }
+  .additional-info__text {
+    text-align: center;
+  }
+  .additional-info__text {
+    margin: 0 auto 20px;
+  }
+  .start-info-list {
+    height: auto;
+    padding: 0 60px;
+  }
+  .start-info-title {
+    text-align: center;
+  }
+  .start-info {
+    padding: 40px 0;
+  }
+  .start-info-card {
+    padding: 16px 20px 10px;
+  }
+  .sponsors .name-block {
+    text-align: center;
+    padding: 0;
+  }
+  .sponsor-card {
+    position: relative;
+    display: block;
+    width: 316px;
+    height: 200px;
+    border: 1px solid #89D7D7;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+    padding: 16px 46px 0;
+    text-decoration: none;
+    outline: none;
+    margin: 0 20px 40px;
+    overflow: hidden;
+  }
+  .sponsors {
+    padding: 60px 20px;
+  }
+  .sponsor-card-name__text {
+    display: block;
+    text-align: center;
+    width: 100%;
+    font-size: 24px;
+    line-height: 30px;
+    color: #fff;
+    font-family: Montserrat-Bold, sans-serif;
+  }
+  .sponsor-card-name {
+    height: 54px;
+  }
+}
+
+@media (max-width: 767px) {
+  .start-info-list {
+    padding: 0;
+  }
 }
 
 @media (max-width: 360px) {
