--- a/gulp/app/scss/_css.scss
+++ b/gulp/app/scss/_css.scss
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import "var";
 @font-face {
   font-family: 'Oswald-Regular';
   src: url("./fonts/Oswald/Oswald-Regular.eot");
@@ -493,10 +493,12 @@ label input:focus {
   display: flex;
   align-items: center;
   margin: 0 0 0 110px;
+  transition: .15s;
 
   &:hover {
     text-decoration: none;
     outline: none;
+    color: $tur;
   }
 
   &__ico {
@@ -1514,6 +1516,7 @@ label input:focus {
   width: 320px;
 
   &__text {
+    display: block;
     font-size: 36px;
     font-family: Montserrat-Bold;
     color: #111;
