--- a/gulp/app/scss/_switch.scss
+++ b/gulp/app/scss/_switch.scss
@@ -6,6 +6,24 @@
   border-radius: 20px;
   display: flex;
 
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: calc(100% / 2);
+    background: #89D7D7;
+    border-radius: 20px;
+    z-index: 0;
+    transition: .15s;
+  }
+
+  &.run:after {
+    left: 50%;
+  }
+
   &-wrapper {
     width: 100%;
     display: flex;
@@ -14,45 +32,21 @@
   }
 
   &-item {
+    position: relative;
+    z-index: 1;
     flex-shrink: 0;
     width: calc(100% / 2);
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 14px;
+    font-family: Montserrat-Bold;
     color: #fff;
     transition: .15s;
     
     &:hover {
       @media (hover: hover) {
         cursor: pointer;
-      }
-    }
-
-    &__text {
-      display: block;
-      position: relative;
-      z-index: 1;
-      font-size: 14px;
-      font-family: Montserrat-Bold;
-    }
-
-    &:first-child {
-      &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        width: calc(100% / 2);
-        background: #89D7D7;
-        border-radius: 20px;
-        z-index: 0;
-        transition: .15s;
-      }
-
-      &.active:after {
-        left: 0;
       }
     }
   }
